# aspect-cli-plugin-buildkite

./: AGENT.md  BUILD.bazel  README.md  buildkite_agent.go  bytestream_client.go  go.bzl  go.mod  go.sum  plugin.go  results.go
bazel/bytestream/: BUILD.bazel  bytestream.pb.go  client.go
bazel/outputfile/: BUILD.bazel  outputfile.go
cmd/mockagent/: BUILD.bazel  README.md  main.go
release/: BUILD.bazel
