load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "outputfile",
    srcs = ["outputfile.go"],
    importpath = "github.com/sourcegraph/aspect-cli-plugin-buildkite/bazel/outputfile",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel/bytestream",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
