load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mockagent_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/aspect-cli-plugin-buildkite/cmd/mockagent",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mockagent",
    embed = [":mockagent_lib"],
    visibility = ["//visibility:public"],
)
